--- a/senguo.cc/admin/templates/seckill/seckill.html
+++ b/senguo.cc/admin/templates/seckill/seckill.html
@@ -2,11 +2,15 @@
 {% block title %}秒杀活动{% end %}
 {% block head %}
 <div class="header">
-    <a href="/customer/discover/{{shop_code}}" class="back"></a>
+    <a href="javascript:;" url="/customer/discover/{{shop_code}}" class="back"></a>
     <span id="seckill">秒杀活动</span>
 </div>
 {% end %}
 {% block content %}
+{% import json%}
+<script>
+    var seckill_goods_ids= {% raw json.dumps(context["seckill_goods_ids"]) %}
+</script>
 <input type="hidden" id="shop_code" value="{{shop_code}}"/>
 <div class="wrap-seckill pm40">
     <div class="wrap-time-top">
@@ -41,7 +45,7 @@
     </ul>
     <p class="no-result mt10">加载中...</p>
 </div>
-<a href="/customer/cart/{{shop_code}}" class="go-cart">
+<a href="javascript:;" url="/customer/cart/{{shop_code}}"  class="go-cart">
     <span class="cart-num origin-cart hide">0</span>
 </a>
 <ul class="hide" id="seckill-item">
