--- a/senguo.cc/admin/templates/seckill/seckill.html
+++ b/senguo.cc/admin/templates/seckill/seckill.html
@@ -2,7 +2,7 @@
 {% block title %}秒杀活动{% end %}
 {% block head %}
 <div class="header">
-    <a href="javascript:;" url="/customer/discover/{{shop_code}}" class="back"></a>
+    <a href="javascript:;" url="/customer/discover/{{shop_code}}" class="back back-prev"></a>
     <span id="seckill">秒杀活动</span>
 </div>
 {% end %}
