--- a/senguo.cc/admin/templates/customer/discover.html
+++ b/senguo.cc/admin/templates/customer/discover.html
@@ -13,7 +13,7 @@
             <span class="pull-right imore"></span>
 	    	<i class="pull-left"></i>
 	    	<span class="pull-left confess-text">告白墙<span class="font12 text-grey ml6">看看果友们的真情告白</span></span>
-	    	<span class="confess-circle circle bg-pink text-white hidden">{{confess_count}}</span>
+	    	<span class="confess-circle circle bg-pink text-white {% if confess_count==0 %}hidden{% end %}">{{confess_count}}</span>
 	    </a>
     </li>
     {% end %}
@@ -24,7 +24,7 @@
             <span class="pull-right imore"></span>
             <i class="pull-left"></i>
             <span class="pull-left confess-text">优惠券<span class="font12 text-grey ml6">{% if a== 0%}更多优惠券等你来抢{% else %}{{a}}批优惠券等你来抢{% end %}</span></span>
-            <span class="confess-circle circle bg-pink text-white hidden">{{confess_count}}</span>
+            <span class="confess-circle circle bg-pink text-white hidden">{{a}}</span>
         </a>
     </li>
     {% end %}
@@ -70,9 +70,9 @@
 {% end %}
 {% block bottom %}
 <script type="text/javascript">
-var confess = parseInt($('.confess-circle').text());
-if(confess != 0){
-	$('.confess-circle').removeClass('hidden');
-}
+    var confess = parseInt($('.confess-circle').text());
+    if(confess != 0){
+    	$('.confess-circle').removeClass('hidden');
+    }
 </script>
 {% end %}
