--- a/senguo.cc/admin/templates/customer/discover.html
+++ b/senguo.cc/admin/templates/customer/discover.html
@@ -49,7 +49,7 @@
         </a>
     </li>
     {%end%}
-    <li class="title clearfix bg-white font14 gbuy">
+    <!--<li class="title clearfix bg-white font14 gbuy">
         <a href="javascript:;" class="text-grey3 confess-wall">
             <span class="pull-right imore"></span>
             <i class="pull-left"></i>
@@ -64,7 +64,7 @@
             <span class="pull-left confess-text">预售<span class="font12 text-grey ml6">10余件水果抢先看</span></span>
             <span class="confess-circle circle bg-pink text-white hidden">10</span>
         </a>
-    </li>
+    </li>-->
 {% end %}
 </ul>
 {% end %}
