--- a/senguo.cc/admin/templates/customer/personal-center.html
+++ b/senguo.cc/admin/templates/customer/personal-center.html
@@ -70,7 +70,7 @@
             </li>
         </ul>
     </div>
-    <div class="bg-white m-b10 clearfix pb0">
+    <div class="bg-white m-b10 clearfix pb0 hidden">
         <a href="{{reverse_url('customerOrder')}}?action=all">
             <p class="title clearfix box-style">
                 <span class="pull-left font14 c333"><em class="presell-icon set-inl-blo pull-left bg_change"></em>我的预售</span>
