--- a/senguo.cc/admin/templates/seckill/discount.html
+++ b/senguo.cc/admin/templates/seckill/discount.html
@@ -2,7 +2,7 @@
 {% block title %}限时折扣{% end %}
 {% block head %}
 <div class="header">
-    <a href="/customer/discover/{{shop_code}}" class="back back-prev"></a>
+    <a href="javascript:;" url="/customer/discover/{{shop_code}}" class="back back-prev"></a>
     <span id="discount">限时折扣</span>
 </div>
 {% end %}
