--- a/senguo.cc/admin/templates/customer/home.html
+++ b/senguo.cc/admin/templates/customer/home.html
@@ -28,7 +28,7 @@
                 <div class="swiper-container" id="swiper-container">
                     <div class="swiper-wrapper">
                         {% for notice in notices%}
-                        <div class="swiper-slide item notice-item">
+                        <div class="swiper-slide item notice-item" data-url="{% if notice[3]==1 %}/seckill/{{handler.shop_code}}{% elif notice[3]==2 %}/discount/{{handler.shop_code}}?action=detail{% end %}">
                             <img src="{{notice[2] or '/static/images/banner.png'}}?imageView2/1/w/800/h/320" alt=""/>
                             <p class="notice-title">{{notice[0]}}</p>
                             <input type="hidden" value="{{notice[1]}}" class="notice-detail"/>
