--- a/senguo.cc/admin/static/css/official_product.css
+++ b/senguo.cc/admin/static/css/official_product.css
@@ -1,11 +1,11 @@
 .wrap-content{width: 1000px;margin: 0 auto;}
 .f16{font-size: 16px !important;}
-.wrap-slide{padding: 60px 0 10px 100px;position: relative;}
+.wrap-slide{padding: 60px 0 10px 87px;position: relative;}
 .slide-box{width: 575px;height: 375px;overflow: hidden;}
 .slide-text{position: absolute;top: 150px;right: 80px;width: 240px;font-size: 14px;color: #999;line-height: 18px;}
-.slide-list{font-size: 0;width: 1152px;}
+.slide-list{font-size: 0;width: 1212px;}
 .anima{-webkit-transition:all .3s ease-in-out;transition:all .3s ease-in-out;-ms-transition:all .3s ease-in-out;}
-.slide-list>li{padding-right: 40px;float: left;width: 192px;position: relative;left: 0;}
+.slide-list>li{padding-right: 40px;float: left;position: relative;left: 0;}
 .phonebg{position: absolute;z-index:1;background: url("/static/official_img/phone.png") no-repeat;width: 180px;height: 374px;top: 4px;left: 279px;}
 .wrap-computer{background-color: #666;height: 410px;position: relative;}
 .wrap-cimg{position: absolute;top: 15px;right: 50px;}
@@ -14,7 +14,8 @@
 .wrap-paytype{position: relative;padding: 60px 0 40px 0;}
 .phone-bg{position: relative;z-index:10;background: url("/static/official_img/phone.png") no-repeat;width: 180px;height: 374px;}
 .wrap-paytype .phone-bg{margin-left: 360px;}
-.phone-bg img{position: absolute;top: 56px;left: 16px;}
+.phone-bg img{position: absolute;top: 55px;left: 10px;}
+.phone-bg2{top: 43px !important;}
 .roll-box{position: absolute;z-index:5;top: 100px;left: 180px;width: 300px;height: 300px;}
 .roll-box>i{display: block;width: 80px;height: 80px;position: absolute;background-size: contain;}
 .roll-box .ali{background-image: url('/static/images/alipay_l.png');top: -70px;left: 76px;}
