--- a/senguo.cc/admin/templates/official/product.html
+++ b/senguo.cc/admin/templates/official/product.html
@@ -6,12 +6,12 @@
         <div class="slide-box">
             <div class="phonebg"></div>
             <ul class="slide-list group" id="slide-list">
-                <li class="s1 anima"><img src="/static/official_img/temp.png" alt=""/></li>
-                <li class="s1 anima"><img src="/static/official_img/2.png" alt=""/></li>
-                <li class="s1 anima"><img src="/static/official_img/2.png" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/temp.png" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/2.png" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/2.png" alt=""/></li>
+                <li class="s1 anima"><img src="/static/official_img/shot_1.jpg" alt=""/></li>
+                <li class="s1 anima"><img src="/static/official_img/shot_2.jpg" alt=""/></li>
+                <li class="s1 anima"><img src="/static/official_img/shot_3.jpg" alt=""/></li>
+                <li class="s2 anima"><img src="/static/official_img/shot_1.jpg" alt=""/></li>
+                <li class="s2 anima"><img src="/static/official_img/shot_2.jpg" alt=""/></li>
+                <li class="s2 anima"><img src="/static/official_img/shot_3.jpg" alt=""/></li>
             </ul>
         </div>
         <div class="slide-text">
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="phone-bg">
-            <img src="/static/official_img/temp.png" alt="森果登录页"/>
+            <img class="phone-bg2" src="/static/official_img/shot_login.jpg" alt="森果登录页"/>
         </div>
         <div class="login-text">
             <p class="f16">多种登录方式</p>
@@ -53,7 +53,7 @@
         <i class="r3"></i>
         <i class="r4"></i>
         <div class="phone-bg">
-            <img src="/static/official_img/temp.png" alt="森果登录页"/>
+            <img src="/static/official_img/shot_marketing.png" alt="森果登录页"/>
         </div>
         <div class="wrap-data-text">
             <p class="f16">多种营销和玩法</p>
