--- a/senguo.cc/admin/templates/login/m_register.html
+++ b/senguo.cc/admin/templates/login/m_register.html
@@ -8,7 +8,7 @@
 	<li class="progress3 progress">设置密码></li>
 </ul>
 <div class="step1 step-box">
-	<input class="input_sty border0 text_grayca" type="text" placeholder="请输入手机号，将作为登录账号" id="enterPhone"/>
+	<input class="input_sty border0 text_grayca" type="tel" placeholder="请输入手机号，将作为登录账号" id="enterPhone"/>
 	<div class="text-grayb1 mt10 pl10 clearfix rule_box">
 		<a href="javascript:;" class="check_btn pull-left" id="accept_rule"></a>
 		<span class="pull-left">我已阅读并同意</span>
