--- a/senguo.cc/admin/templates/login/m_login.html
+++ b/senguo.cc/admin/templates/login/m_login.html
@@ -14,7 +14,7 @@
 </div>
 <p class="title text-center text-grayb1">使用手机号登录</p>
 <div class="phone_login bg-white">
-	<input type="text" placeholder="请输入手机号" class="phone input_sty border0 text-gray2 border-bf8" id="phone"/>
+	<input type="tel" placeholder="请输入手机号" class="phone input_sty border0 text-gray2 border-bf8" id="phone"/>
 	<input type="password" placeholder="请输入密码" class="password input_sty border0 text-gray2" id="password"/>
 </div>
 <div class="login_check center-block">
