--- a/senguo.cc/admin/static/css/market-goods.css
+++ b/senguo.cc/admin/static/css/market-goods.css
@@ -49,6 +49,10 @@ table{width: 100%;border-collapse: collapse;table-layout: fixed;}
 .wrap-goods-detail{position: relative;}
 .img-list{width: 100%;height: 0;padding-bottom: 60%;position: relative;background-color: #fff;}
 .swiper-container{width: 100%;height: 0;padding-bottom: 60%;overflow: hidden;position: relative;}
+@media screen and (max-width:640px){
+	.img-list{width: 100%;height: 0;padding-bottom:100%;position: relative;background-color: #fff;}
+	.swiper-container{width: 100%;height: 0;padding-bottom:100%;overflow: hidden;position: relative;}
+}
 .swiper-slide>img{width: 100%;}
 .pagination{position: absolute;z-index:10;right:12px;bottom: 9px;white-space: nowrap;line-height: 1;}
 .swiper-pagination-switch{width:12px;height: 12px;border-radius:50%;-webkit-box-sizing:border-box;display: inline-block;margin:0 5px;-webkit-transition:all .2s ease;background-color: #fff;}
