fix 订单搜索 文案

--- a/senguo.cc/admin/templates/admin/orders.html
+++ b/senguo.cc/admin/templates/admin/orders.html
@@ -50,7 +50,7 @@
         </li>
     </ul>
     <div class="search-input input-group pull-right">
-         <input type="text" value="" placeholder="输入订单编号,收货人姓名或电话进行搜索" class="search-con form-control"/>
+         <input type="text" value="" placeholder="输入订单编号、收货人姓名或电话" class="search-con form-control"/>
          <input type="submit" value="订单搜索" class="search-btn form-control order-search"/>
     </div>
 </div>
