--- a/senguo.cc/admin/templates/m-admin/order-search.html
+++ b/senguo.cc/admin/templates/m-admin/order-search.html
@@ -7,7 +7,7 @@
     <a href="javascript:;" class="back goback">返回</a>
     <div class="wrap-order-tab">
         <ul class="group order-type-list">
-            <div class="wrap-ipt"><input type="tel" class="search-ipt" placeholder="请输入订单编号,收货人姓名或电话搜索" id="search-ipt"/></div>
+            <div class="wrap-ipt"><input type="tel" class="search-ipt" placeholder="输入订单编号、收货人姓名或电话" id="search-ipt"/></div>
         </ul>
     </div>
     <a href="javascript:;" class="head-right search" id="search-order"><em></em></a>
