add superadmin 店铺模版统计

--- a/senguo.cc/admin/templates/superAdmin/shop-manage.html
+++ b/senguo.cc/admin/templates/superAdmin/shop-manage.html
@@ -90,6 +90,7 @@
                     </p>
                     <p>
                         <span class="tit2 old_user">老用户：{{data["old_user"]}}</span>
+                        <span class="shop_tpl">店铺模版：{{data["shop_tpl"]}}</span>
                     </p>
                 </div>
                 <div class="col-lg-5 col-md-5 ml13">
@@ -153,6 +154,7 @@
                 </p>
                 <p>
                     <span class="tit2 ">老用户：<span class="uold_user"></span></span>
+                    <span class="">店铺模版：<span class="ushop_tpl"></span></span>
                 </p>
             </div>
             <div class="col-lg-5 col-md-5 ml13">
