--- a/senguo.cc/admin/templates/customer/comment-order.html
+++ b/senguo.cc/admin/templates/customer/comment-order.html
@@ -8,6 +8,7 @@
 <div class="header">订单评价</div>
 <div class="contain">
     <input type="hidden" id="token" value="{{token}}"/>
+    <input type="hidden" id="comment_active" value="{{comment_active}}"/>
     <div class="contain-box">
         <div class="wrap-user-txt">
             <textarea id="user-txt" placeholder="长度在5-100字之间，您的评价对其他用户也有很大帮助"></textarea>
