--- a/senguo.cc/admin/templates/official/product.html
+++ b/senguo.cc/admin/templates/official/product.html
@@ -6,12 +6,9 @@
         <div class="slide-box">
             <div class="phonebg"></div>
             <ul class="slide-list group" id="slide-list">
-                <li class="s1 anima"><img src="/static/official_img/temp.png" alt=""/></li>
-                <li class="s1 anima"><img src="/static/official_img/2.png" alt=""/></li>
-                <li class="s1 anima"><img src="/static/official_img/2.png" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/temp.png" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/2.png" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/2.png" alt=""/></li>
+                <li class="s1 anima" data-index="0"><img src="/static/official_img/temp.png" alt=""/></li>
+                <li class="s1 anima" data-index="1"><img src="/static/official_img/2.png" alt=""/></li>
+                <li class="s1 anima" data-index="2"><img src="/static/official_img/2.png" alt=""/></li>
             </ul>
         </div>
         <div class="slide-text">
