--- a/senguo.cc/admin/static/css/official_product.css
+++ b/senguo.cc/admin/static/css/official_product.css
@@ -1,12 +1,12 @@
 .wrap-content{width: 1000px;margin: 0 auto;}
 .f16{font-size: 16px !important;}
 .wrap-slide{padding: 60px 0 10px 100px;position: relative;}
-.slide-box{width: 575px;height: 375px;overflow: hidden;}
+.slide-box{width: 600px;height: 375px;overflow: hidden;}
 .slide-text{position: absolute;top: 150px;right: 80px;width: 240px;font-size: 14px;color: #999;line-height: 18px;}
-.slide-list{font-size: 0;width: 1152px;}
-.anima{-webkit-transition:all .3s ease-in-out;transition:all .3s ease-in-out;-ms-transition:all .3s ease-in-out;}
-.slide-list>li{padding-right: 40px;float: left;width: 192px;position: relative;left: 0;}
-.phonebg{position: absolute;z-index:1;background: url("/static/official_img/phone.png") no-repeat;width: 180px;height: 374px;top: 4px;left: 279px;}
+.slide-list{font-size: 0;width: 800px;height: 267px;position: relative;}
+.slide-list>li{padding-right: 40px;float: left;position: relative;left: 0;}
+.slide-list>li>img{width: 160px;height: 267px;}
+.phonebg{position: absolute;z-index:1;background: url("/static/official_img/phone.png") no-repeat;width: 180px;height: 374px;top: 4px;left: 289px;}
 .wrap-computer{background-color: #666;height: 410px;position: relative;}
 .wrap-cimg{position: absolute;top: 15px;right: 50px;}
 .wrap-data-text{position: absolute;left: 100px;top: 150px;width: 250px;}
