fix admin confess active button

--- a/senguo.cc/admin/templates/admin/coupon.html
+++ b/senguo.cc/admin/templates/admin/coupon.html
@@ -8,7 +8,7 @@
         <a class="stop-mode" href="javascript:;" style="display:none;">未启用<span class="circle"></span></a>
     </div>
      <div class="wrap-pay-txt">
-        <p class="c333 f14 coupon-show-txt">已<span>{%if coupon_active_cm==0 %}停用{% else %}启用{%end%}</span>优惠券<a href="javascript:;" class="ml10 f14 show-detail">查看详情</a></p>
+        <p class="c333 f14 coupon-show-txt">已<span class="coupon-status">{%if coupon_active_cm==0 %}停用{% else %}启用{%end%}</span>优惠券<a href="javascript:;" class="ml10 f14 show-detail">查看详情</a></p>
         <p class="mt6">用户可在下单支付时，选择使用优惠券抵扣现金。</p>
         <p>商家通过发放优惠券可吸引用户，提高用户粘性。优惠券形式有：活动优惠券、充值优惠券两类。</p>
     </div>
